--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>SPIDA Africa - Transforming African Agriculture</title>
     <meta name="description" content="SPIDA combines advanced technology with local expertise to revolutionize Africa's food system. Higher productivity, guaranteed markets, and financial support for farmers." />
     <meta name="author" content="SPIDA Africa" />
@@ -11,11 +13,11 @@
     <meta property="og:title" content="SPIDA Africa - Transforming African Agriculture" />
     <meta property="og:description" content="Advanced technology and smart data solutions for African farmers. Increase yields by 50% with guaranteed market access and financial support." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@spida_africa" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
