fixed google issue

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/spida-logo.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>SPIDA Africa - Transforming African Agriculture</title>
     <meta name="description" content="SPIDA combines advanced technology with local expertise to revolutionize Africa's food system. Higher productivity, guaranteed markets, and financial support for farmers." />
@@ -18,6 +18,21 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@spida_africa" />
     <meta name="twitter:image" content="/placeholder.svg" />
+
+    <!-- Organization JSON-LD for Google Search -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "SPIDA Africa",
+      "url": "https://spida.africa/",
+      "logo": "https://spida.africa/spida-logo.png",
+      "sameAs": [
+        "https://www.linkedin.com/company/spida-africa",
+        "https://www.instagram.com/spida_africa"
+      ]
+    }
+    </script>
   </head>
 
   <body>
